[package]
name = "luminos"
version = "0.1.1"
edition = "2024"
authors = ["joseph@raubstudios.com"]
description = "A Laravel inspired crate"
repository = "https://github.com/RaubJo/luminos"
license = "MIT"

[lib]
name = "luminos"
crate-type = ["lib"]
path = "src/Luminos/lib.rs"

[dependencies]
luminos-support = { path = "Support", version = "0.1.0"}
luminos-container = { path = "Container", version = "0.1.0"}
luminos-contracts = { path = "Contracts", version = "0.1.0"}

[workspace]
members = ["Support", "Container", "Contracts"]

[workspace.lints.rust]
unsafe_code = "forbid"
