[package]
name = "luminos"
version = "0.1.1"
edition = "2024"
authors = ["joseph@raubstudios.com"]
description = "A Laravel inspired collection of crates"
repository = "https://github.com/RaubJo/luminos"
license = "MIT"

[lib]
name = "luminos"
crate-type = ["lib"]
path = "src/luminos/lib.rs"

[dependencies]
luminos-support = { path = "support", version = "0.1.0" }
luminos-container = { path = "container", version = "0.1.0" }
luminos-contracts = { path = "contracts", version = "0.1.0" }
luminos-lyra = { path = "lyra", version = "0.1.0" }

[workspace]
members = ["support", "container", "contracts", "lyra", "rpc"]

[workspace.lints.rust]
unsafe_code = "forbid"
